section3 alignment fixed

--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ section {
 }
 
 .right-side {
-    flex-grow: 1;
+    width: 50%;
 }
 
 
@@ -879,7 +879,7 @@ section {
 /*css for VERTICAL LINE in section 3*/
 .left-side {
     border-right: 2px dotted #DC5B81;
-    margin-left: -22px;
+    margin-left: 0px;
     height: 1870px;
 }
 
@@ -924,11 +924,21 @@ section {
 }
 
 .section3-text3 {
+    text-align: end;
+    font-size: 18px;
+    font-family: cursive;
+    margin-top: 10px;
+    color: grey;
+    max-width: 400px;
+}
+
+.section3-text4 {
     text-align: start;
     font-size: 18px;
     font-family: cursive;
     margin-top: 10px;
     color: grey;
+    max-width: 400px;
 }
 
 
@@ -1000,6 +1010,7 @@ section {
     margin-top: 150px;
 }
 
+
 @media (max-width: 1200px) {
 
     .section3{
@@ -1051,7 +1062,7 @@ section {
         /* max-width:100%; */
         margin-top:20px;
         padding: 0px;
-        margin-left: 17%;
+        /* margin-left: 0px; */
         /* max-width: 80%; */
     }
 
@@ -1109,8 +1120,10 @@ section {
     }
     .section3-text3 {
         max-width: 80%;
+        text-align: start;
     }
 }
+
 
 /* end of section3 css */
 
@@ -2117,7 +2130,7 @@ input[type=submit]:hover {
 
 @media (max-width:800px){
     .section11 {
-        width: 80%;
+        width: 100%;
         height: 130px;
         background-color: #80C2C1;
         margin-top: 300px;
@@ -2153,6 +2166,7 @@ input[type=submit]:hover {
     font-weight: 300;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 20px;
+    text-align: center;
 }
 
 .section12-text2 {
